TEST-2 TEST-8 TEST-9 QnA 작성자 닉네임, QnA 댓글 작성 취소, 해외대학&파견국가 리스트 형식 수정

--- a/templates/country/country_list.html
+++ b/templates/country/country_list.html
@@ -2,17 +2,24 @@
 
 
 {% block content %}
-{% autoescape off %}
-{% for key, val in countries_dict.items %}
-    <ul>
-        <h3>{{ key }}</h3>
-        {% for country in val %}
-            <li><a href="{% url 'country:country_wiki' pk=country.pk %}">
-                {{ country.country_name }}
-            </a></li>
+<div class="mx-5 mt-5">
+    {% autoescape off %}
+    <div>
+        {% for key, val in countries_dict.items %}
+        <a href="#{{ key }}">{{ key }}</a>
         {% endfor %}
-    </ul>
-    <br>
-{% endfor %}
-{% endautoescape %}
+    </div>
+    <div class="mx-4">
+        {% for key, val in countries_dict.items %}
+            <h3 id="{{ key }}">{{ key }}</h3>
+            {% for country in val %}
+                <a href="{% url 'country:country_wiki' pk=country.pk %}">
+                    {{ country.country_name }}
+                </a>
+            {% endfor %}
+            <br>
+        {% endfor %}
+    </div>
+    {% endautoescape %}
+</div>
 {% endblock %}
