--- a/templates/country/comment_form.html
+++ b/templates/country/comment_form.html
@@ -14,7 +14,7 @@
     <div>
         <div class="d-flex justify-content-between">
             <h4>{{ question.question_title }}</h4>
-            <p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
+            <p>작성자: {{ question.author.nickname }} 작성 시간: {{ question.created_at }}</p>
         </div>
         <p>
         {{ question.question_content }}
@@ -31,10 +31,10 @@
             <h4>답변</h4>
             <button onclick="canIAnswer('{{ is_authenticated }}')">답변 달기</button>
         </div>
-        {% for comment in question.dcomment_set.all %}
+        {% for comment in question.ccomment_set.all %}
             <div class="d-flex justify-content-between">
                 <div>
-                    <h5>{{ comment.comment_author }}</h5> 
+                    <h5>{{ comment.comment_author.nickname }}</h5> 
                     {{ comment.comment_content }}
                     
                 </div>
@@ -52,6 +52,7 @@
             {% csrf_token %}
             {{form.as_p}}
             <input type="submit" value="저장하기"/>
+            <a href="{% url 'country:question_detail' country.pk question.pk %}" class="btn btn-primary btn-sm">취소</a>
         </form>
     </div>
 </div>
