--- a/templates/domestic/comment_form.html
+++ b/templates/domestic/comment_form.html
@@ -21,7 +21,7 @@
         <div>
             <div class="d-flex justify-content-between">
                 <h4>{{ question.question_title }}</h4>
-                <p>작성자: {{ question.author}} 작성 시간: {{ question.created_at }}</p>
+                <p>작성자: {{ question.author.nickname }} 작성 시간: {{ question.created_at }}</p>
             </div>
             <p>
             {{ question.question_content }}
@@ -59,6 +59,7 @@
                 {% csrf_token %}
                 {{form.as_p}}
                 <input type="submit" value="저장하기"/>
+                <a href="{% url 'domestic:question_detail' domestic.pk question.pk %}" class="btn btn-primary btn-sm">취소</a>
             </form>
             </div>
     </div>
