--- a/templates/domestic/univ_list.html
+++ b/templates/domestic/univ_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="mx-5 mt-5">
     {% for key, val in universities_dict.items %}
         <a href="#{{ key }}">{{ key }}</a>
     {% endfor %}
@@ -12,4 +13,5 @@
     </ul>
     <br>
     {% endfor %}
+</div>
 {% endblock %}
