--- a/templates/foreign/comment_form.html
+++ b/templates/foreign/comment_form.html
@@ -5,7 +5,7 @@
     <div style="width:750px;">
         <div class="d-flex justify-content-between ">
             <div class="d-flex align-items-center ">
-                <h1>{{question.home_university}}</h1>
+                <h1>{{question.away_university}}</h1>
                 <span>QnA</span>
             </div>
             <button class="btn btn-sm btn-border" onclick="location.href='{% url "foreign:question_create" foreign_id %}'"> 글쓰기 </button>
@@ -16,7 +16,7 @@
                 <h4>{{ question.question_title }}</h4>
                 <p>작성자: {{ question.author.nickname}} 작성 시간: {{ question.created_at }}</p>
             </div>
-            <p>파견교: {{ question.away_university }} 파견 국가: {{ question.country }}</p>
+            <!-- <p>파견교: {{ question.away_university }} 파견 국가: {{ question.away_university.country }}</p> -->
             <p>
             {{ question.question_content }}
             </p>
@@ -32,10 +32,10 @@
                 <h4>답변</h4>
                 <button onclick="location.href='{% url "foreign:q_comment_create" foreign_id question.pk %}'">답변 달기</button>
             </div>
-            {% for comment in question.comment_set.all %}
+            {% for comment in question.fcomment_set.all %}
                 <div class="d-flex justify-content-between">
                     <div>
-                        <h5>{{ comment.comment_author }}</h5> 
+                        <h5>{{ comment.comment_author.nickname }}</h5> 
                         {{ comment.comment_content }}
                         
                     </div>
@@ -51,6 +51,7 @@
                 {% csrf_token %}
                 {{form.as_p}}
                 <input type="submit" value="저장하기"/>
+                <a href="{% url 'foreign:question_detail' foreign_id question.pk %}" class="btn btn-primary btn-sm">취소</a>
             </form>
             </div>
     </div>
