--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -25,7 +25,7 @@
 {%if all_comment %}
 {%for comment in all_comment %}
 <div class="comment_{{comment.id}} d-flex justify-content-between">
-    작성자:{{comment.comment_author.nickname}} &#160; &#160; 
+    {{comment.comment_author.nickname}} &#160; &#160; 
     {{comment.comment_content}}
     {% if request.user == comment.comment_author %}
     <div class="btn btn-outline-secondary delete " onclick="onClickDelete({{comment.id}} )">삭제</div>
@@ -69,7 +69,7 @@
         const element=document.querySelector(`.post_${post_id}`)
         const newDiv = document.createElement('div')
         newDiv.className = `comment_${comment_id} d-flex justify-content-between`;
-        newDiv.innerHTML = `작성자:{{request.user.nickname}} &#160; &#160; ${comment_content}<div class="btn btn-outline-secondary delete" onclick="onClickDelete(${comment_id})">삭제</div>`
+        newDiv.innerHTML = `{{request.user.nickname}} &#160; &#160; ${comment_content}<div class="btn btn-outline-secondary delete" onclick="onClickDelete(${comment_id})">삭제</div>`
         element.appendChild(newDiv)
         //댓글 입력창 비워주기
         const input_content = document.querySelector(`#comment_${post_id}`)
