--- a/templates/country/country_wiki.html
+++ b/templates/country/country_wiki.html
@@ -12,29 +12,46 @@
         <div>
             <p>1. 비자 발급 방법</p>
             <pre>{{country.visa}}</pre>                              <!--textarea에 입력한대로 보여주는 pre tag-->
-            <div><a href="{% url "country:wiki_edit_visa" country.pk %}">수정</a></div>
+            <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','visa')">수정</button>
             <div>
                 <p>2. 현지생활 및 치안</p>
                 <pre>{{country.lifestyle}}</pre>
-                <div><a href="{% url "country:wiki_edit_lifestyle" country.pk %}">수정</a></div>
+                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','lifestyle')">수정</button>
             </div>
             <div>
                 <p>3. 물가 및 체류 비용</p>
                 <pre>{{country.money}}</pre>
-                <div><a href="{% url "country:wiki_edit_money" country.pk %}">수정</a></div>
+                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','money')">수정</button>
             </div>
             <div>
                 <p>4. 문화적 특징</p>
                 <pre>{{country.culture}}</pre>
-                <div><a href="{% url "country:wiki_edit_culture" country.pk %}">수정</a></div>
+                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','culture')">수정</button>
             </div>
             <div>
                 <p>5. 코로나 정보</p>
                 <pre>{{country.covid_info}}</pre>
-                <div><a href="{% url "country:wiki_edit_covid_info" country.pk %}">수정</a></div>
+                <button class="btn btn-primary btn-sm" onclick="Edit('{{ user.is_authenticated }}','covid_info')">수정</button>
             </div>
         </div>
     </div>
 </div>
 
 {%endblock%}
+
+{% block extra  %}
+<script>
+    function Edit(is_authenticated,str){
+    if(is_authenticated == 'False') {
+            alert('로그인이 필요한 서비스입니다.');
+            window.location.href='{% url "login:login" %}';
+        }else{
+           
+            var view=`/country/wiki/edit_${str}/`           //url 연결
+        
+            window.location.href=view+'{{country.pk}}'
+
+        }
+    }
+</script>
+{% endblock %}
