TEST-43 Style: 위키 수정 버튼 통일

--- a/templates/domestic/wiki.html
+++ b/templates/domestic/wiki.html
@@ -20,26 +20,26 @@
         <div>
             <p>1. 지원 방법</p>
             <pre>{{univ.home_apply}}</pre>
-            <button class="btn btn-sm btn-border" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','apply')"> 수정 </button>                              
+            <button class="btn btn-sm btn-primary" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','apply')"> 수정 </button>                              
             <div>
                 <p>2. 필요 서류</p>
                 <pre>{{univ.home_document}}</pre>
-                <button class="btn btn-sm btn-border" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','document')"> 수정 </button>                              
+                <button class="btn btn-sm btn-primary" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','document')"> 수정 </button>                              
             </div>
             <div>
                 <p>3. 수학 가능 학기</p>
                 <pre>{{univ.semester}}</pre>
-                <button class="btn btn-sm btn-border" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','semester')"> 수정 </button>                              
+                <button class="btn btn-sm btn-primary" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','semester')"> 수정 </button>                              
             </div>
             <div>
                 <p>4. 교내 장학금 정보</p>
                 <pre>{{univ.home_scholarship}}</pre>
-                <button class="btn btn-sm btn-border" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','scholarship')"> 수정 </button>                              
+                <button class="btn btn-sm btn-primary" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','scholarship')"> 수정 </button>                              
             </div>
             <div>
                 <p>5. 유학생 보험 준비</p>
                 <pre>{{univ.insurance}}</pre>
-                <button class="btn btn-sm btn-border" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','insurance')"> 수정 </button>                              
+                <button class="btn btn-sm btn-primary" onclick="canIEdit('{{ is_authenticated }}','{{ is_enrolled }}','insurance')"> 수정 </button>                              
             </div>
         </div>
     </div>
