TEST-42 Fix: 비밀번호 변경시 오류 처리

--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -15,7 +15,7 @@
                 <th width='50'>번호</th>
                 <th width='400' >제목</th>
                 <th width='100'>파견 학기</th>
-                <th>날짜</th>
+                <th width='150'>날짜</th>
             </tr>
             {%for review in all_review %}
             <tr>
