TEST-38 Fix: 평점평균 상한선 4.5, 이수학점 양수값으로 설정

--- a/templates/domestic/credit_form.html
+++ b/templates/domestic/credit_form.html
@@ -26,3 +26,11 @@
     </div>
 </div>
 {% endblock %}
+
+{% block extra %}
+    {% if message %}
+        <script>
+            alert("{{ message }}")
+        </script>
+    {% endif %}
+{% endblock %}
