TEST-48 Feat: 국내 QnA 글, 답글 작성 권한 해당 학교 학생 한정
comment 추가, 수정 페이지에서 이름말고 닉네임 나오게 하는 것도 수정했어용

--- a/templates/domestic/comment_form.html
+++ b/templates/domestic/comment_form.html
@@ -15,7 +15,7 @@
                 <h1>{{ domestic.home_name }}</h1>
                 <span>QnA</span>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
         </div>
         <hr>
         <div>
@@ -36,12 +36,12 @@
             <hr>
             <div class="d-flex justify-content-between">
                 <h4>답변</h4>
-                <button onclick="canIAnswer('{{ is_authenticated }}')">답변 달기</button>
+                <button onclick="canIAnswer('{{ is_authenticated }}','{{ is_enrolled }}')">답변 달기</button>
             </div>
             {% for comment in question.dcomment_set.all %}
                 <div class="d-flex justify-content-between">
                     <div>
-                        <h5>{{ comment.comment_author }}</h5> 
+                        <h5>{{ comment.comment_author.nickname }}</h5> 
                         {{ comment.comment_content }}
                         
                     </div>
@@ -75,12 +75,16 @@
         }
     };
 
-    const canIAnswer= (is_authenticated)=> {
+    const canIAnswer= (is_authenticated, is_enrolled)=> {
         if (is_authenticated == 'False') {
             alert('로그인이 필요한 서비스입니다.');
             window.location.href='{% url "login:login" %}';
         }else{
-            window.location.href='{% url "domestic:comment_create" domestic.pk question.pk %}';
+            if(is_enrolled == 'False'){
+                alert('해당 학교 학생만 이용할 수 있는 서비스입니다.');
+            }else{
+                window.location.href='{% url "domestic:comment_create" domestic.pk question.pk %}';
+            }
         }
     };
 </script>
