--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -15,7 +15,7 @@
                 <h1>{{ domestic.home_name }}</h1>
                 <span>QnA</span>
             </div>
-            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}')"> 글쓰기 </button>
+            <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
         </div>
         <hr>
         <div>
@@ -35,7 +35,7 @@
             <hr>
             <div class="d-flex justify-content-between">
                 <h4>답변</h4>
-                <button onclick="canIAnswer('{{ is_authenticated }}')">답변 달기</button>
+                <button onclick="canIAnswer('{{ is_authenticated }}','{{ is_enrolled }}')">답변 달기</button>
             </div>
             {% for comment in comments %}
                 <div class="d-flex justify-content-between">
@@ -56,21 +56,29 @@
     </div>
 </div>
 <script>
-    const canIPost= (is_authenticated)=> {
+    const canIPost = (is_authenticated, is_enrolled)=> {
         if (is_authenticated == 'False') {
             alert('로그인이 필요한 서비스입니다.');
             window.location.href='{% url "login:login" %}';
         }else{
-            window.location.href='{% url "domestic:question_create" domestic.pk %}';
+            if(is_enrolled == 'False'){
+                alert('해당 학교 학생만 이용할 수 있는 서비스입니다.');
+            }else{
+                window.location.href='{% url "domestic:question_create" domestic.pk %}';
+            }
         }
     };
 
-    const canIAnswer= (is_authenticated)=> {
+    const canIAnswer= (is_authenticated, is_enrolled)=> {
         if (is_authenticated == 'False') {
             alert('로그인이 필요한 서비스입니다.');
             window.location.href='{% url "login:login" %}';
         }else{
-            window.location.href='{% url "domestic:comment_create" domestic.pk question.pk %}';
+            if(is_enrolled == 'False'){
+                alert('해당 학교 학생만 이용할 수 있는 서비스입니다.');
+            }else{
+                window.location.href='{% url "domestic:comment_create" domestic.pk question.pk %}';
+            }
         }
     };
     
