--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -17,16 +17,30 @@
                 <th width='100'>파견 학기</th>
                 <th width='150'>날짜</th>
             </tr>
-            {%for review in all_review %}
-            <tr>
-                <td class="numbered" align='center'></td>
-                <td><a href="{% url "foreign:review_detail" foreign_id review.pk %}">{{ review.title }}</a></td>
-                <td align="center">{{review.away_year}}-{{review.away_semester}}</td>
-                <td align="center">{{ review.created_at }}</td>
-            </tr>
+            {%for review in page_obj %}
+                    <tr>
+                        <td class="numbered" align='center'></td>
+                        <td><a href="{% url "foreign:review_detail" foreign_id review.pk %}">{{ review.title }}</a></td>
+                        <td align="center">{{review.away_year}}-{{review.away_semester}}</td>
+                        <td align="center">{{ review.created_at }}</td>
+                    </tr>
             {% endfor %}
         </table>
-
+        <div class="pagination">
+        <span class="step-links">
+        {% if page_obj.has_previous %}
+        <a href="?page=1">&laquo; first</a>
+        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">next</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 </div>
 {%endblock%}
 
@@ -36,6 +50,9 @@
         var init = startnum;
         var td_list = document.querySelectorAll(`.numbered`);
         for(var i=0; i<td_list.length; i++){
+            if (i==0){
+                init=init+({{ page_obj.number }}-1)*10;
+            }
             init++;
             td_list[i].innerHTML= `${init}`;
         }
