TEST-51 Feat: 비밀번호 재설정 구현(임시 비밀번호를 메일로 보내주는 방식 채택)

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -21,6 +21,7 @@
                 </div>
             {% endif %}
             <input class="btn btn-primary mt-2" type="submit" value="로그인" />
+            <a href="{% url 'login:reset_password' %}">비밀번호 재설정</a>
         </form>
     </div>
 </div>
