TEST-50 Fix: page num수정

--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -26,8 +26,8 @@
                     </tr>
             {% endfor %}
         </table>
-        <div class="pagination">
-        <span class="step-links">
+        <div class="Rpagination">
+        <span class="Rstep-links">
         {% if page_obj.has_previous %}
         <a href="?page=1">&laquo; first</a>
         <a href="?page={{ page_obj.previous_page_number }}">previous</a>
@@ -51,7 +51,7 @@
         var td_list = document.querySelectorAll(`.numbered`);
         for(var i=0; i<td_list.length; i++){
             if (i==0){
-                init=init+({{ page_obj.number }}-1)*10;
+                init=init+({{ page_obj.number }}-1)*15;
             }
             init++;
             td_list[i].innerHTML= `${init}`;
