--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -15,7 +15,10 @@
 <p>파견학기: {{review.away_year}}-{{review.away_semester}}</p>
 <p>날짜: {{review.created_at}}</p>
 {% if request.user == review.post_author %}
-<a href="{% url "foreign:review_delete" foreign_id review.pk%}">삭제</a>
+<form action="{% url "foreign:review_delete" foreign_id review.pk %}" method="post">
+    {% csrf_token %}
+    <input type="submit" value="삭제">
+</form>
 <a href="{% url "foreign:review_update" foreign_id review.pk%}">수정</a>
 {% endif %}
 <a href="{% url "foreign:review_list" foreign_id %}">목록</a>
