TEST-57 Fix: url로 좌표 찍어도 학교 인증 안되어있으면 수정 불가능하도록 구현

--- a/templates/domestic/wiki.html
+++ b/templates/domestic/wiki.html
@@ -60,3 +60,10 @@
     };
 </script>
 {%endblock%}
+{% block extra %}
+    {% if certificate_error %}
+        <script>
+            alert("해당 학생만 이용할 수 있는 서비스입니다.");
+        </script>
+    {% endif %}
+{% endblock %}
