--- a/templates/foreign/review_list.html
+++ b/templates/foreign/review_list.html
@@ -26,20 +26,61 @@
                     </tr>
             {% endfor %}
         </table>
-        <div class="Rpagination">
-        <span class="Rstep-links">
+        
+            <div style="text-align:center">
+                <div class="pagination">
+                
+                    <div style="width:35%; margin: 5px;">
+                    {% if page_obj.has_previous %}
+                        <a class="abutton" href="?page=1">맨 앞으로</a>
+                        <a class="abutton" href="?page={{ bpage_obj.previous_page_number }}">이전</a>
+                    {% endif %}
+                    </div>
+    
+                    <div style="width:30%; margin: 5px;">
+                    {% for page in page_obj.paginator.page_range %}
+                        {% if page >= page_obj.number|add:-2 and page <= page_obj.number|add:2 %}
+                        <span class="{% if page == page_obj.number %}current{% endif %}">
+                            <a href="?page={{ page }}" {% if page == page_obj.number %}style="font-weight: bold;"{%endif%}>{{ page}}</a>
+                            
+                        </span>
+                        {% elif page >= page_obj.number|add:-3 and page <= page_obj.number|add:3 %}
+                            ..
+                        {% endif %}
+                    {% endfor %}
+                    </div>
+    
+                    <div style="width:35%; margin: 5px;">
+                    {% if page_obj.has_next %}
+                        <a class="abutton" href="?page={{ page_obj.next_page_number }}">다음</a>
+                        <a class="abutton" href="?page={{ page_obj.paginator.num_pages }}">맨 뒤로</a>
+                    {% endif %}
+                    </div>
+    
+                </div>  
+            </div> 
+     
+        <!-- <span class="Rstep-links">
         {% if page_obj.has_previous %}
-        <a href="?page=1">&laquo; first</a>
-        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        <a href="?page=1">&laquo; 맨 앞으로</a>
+        <a href="?page={{ page_obj.previous_page_number }}">이전</a>
         {% endif %}
         <span class="current">
+            {% for page in page_obj.paginator.page_range %}
+            {% if page >= page_obj.number|add:-2 and page <= page_obj.number|add:2 %}
+            <span class="{% if page == page_obj.number %}current{% endif %}">
+                <a href="?page={{ page }}">{{ page}}</a>
+            </span>
+            {% elif page >= page_obj.number|add:-3 and page <= page_obj.number|add:3 %}
+            {% endif %}
+            {% endfor %}
             Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
         </span>
         {% if page_obj.has_next %}
-        <a href="?page={{ page_obj.next_page_number }}">next</a>
-        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        <a href="?page={{ page_obj.next_page_number }}">다음</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}">맨 뒤로 &raquo;</a>
         {% endif %}
-    </span>
+    </span> -->
 </div>
 </div>
 {%endblock%}
