--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -27,7 +27,10 @@
             </p>
             <div class="d-flex justify-content-end">
                 {% if question.author == user %}
-                    <button onclick="location.href='{% url "domestic:question_delete" domestic.pk question.pk %}'"> 삭제 </button>
+                    <form action='{% url "domestic:question_delete" domestic.pk question.pk %}' method="post" style="  display: inline; background: transparent">
+                        {% csrf_token %}
+                        <input type="submit" value="삭제" >
+                    </form>
                     <button onclick="location.href='{% url "domestic:question_edit" domestic.pk question.pk %}'"> 수정 </button>
                 {% endif %}
                 <button onclick="location.href='{% url "domestic:question_list" domestic.pk %}'"> 목록 </button>
