--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -17,14 +17,46 @@
                 <th width='600' >제목</th>
                 <th>날짜</th>
             </tr>
-            {% for question in questions %}
+            {%for question in page_obj %}
             <tr>
                 <td class="numbered" align='center'></td>
-                <td><a href="{% url 'country:question_detail' country.pk question.pk %}">{{ question.question_title }}</a></td>
-                <td>{{ question.created_at }}</td>
+                <td><a href="{% url "country:question_detail" country_id question.pk %}">{{ question.question_title }}</a></td>
+                <td>{{ question.created_at}}</td>
             </tr>
             {% endfor %}
         </table>
+        <div style="text-align:center">
+            <div class="pagination">
+            
+                <div style="width:35%; margin: 5px;">
+                {% if page_obj.has_previous %}
+                    <a class="abutton" href="?page=1">맨 앞으로</a>
+                    <a class="abutton" href="?page={{ bpage_obj.previous_page_number }}">이전</a>
+                {% endif %}
+                </div>
+
+                <div style="width:30%; margin: 5px;">
+                {% for page in page_obj.paginator.page_range %}
+                    {% if page >= page_obj.number|add:-2 and page <= page_obj.number|add:2 %}
+                    <span class="{% if page == page_obj.number %}current{% endif %}">
+                        <a href="?page={{ page }}" {% if page == page_obj.number %}style="font-weight: bold;"{%endif%}>{{ page}}</a>
+                        
+                    </span>
+                    {% elif page >= page_obj.number|add:-3 and page <= page_obj.number|add:3 %}
+                        ..
+                    {% endif %}
+                {% endfor %}
+                </div>
+
+                <div style="width:35%; margin: 5px;">
+                {% if page_obj.has_next %}
+                    <a class="abutton" href="?page={{ page_obj.next_page_number }}">다음</a>
+                    <a class="abutton" href="?page={{ page_obj.paginator.num_pages }}">맨 뒤로</a>
+                {% endif %}
+                </div>
+
+            </div>  
+        </div>
     </div>
 
     <script>
