TEST-60 Style: 파견국가 QnA 넘버링 수정

--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -61,14 +61,17 @@
 
     <script>
         function numbering(startnum){
-            var init = startnum;
-            var td_list = document.querySelectorAll(`.numbered`);
-            for(var i=0; i<td_list.length; i++){
-                init++;
-                td_list[i].innerHTML= `${init}`;
+        var init = startnum;
+        var td_list = document.querySelectorAll(`.numbered`);
+        for(var i=0; i<td_list.length; i++){
+            if (i==0){
+                init=init+({{ page_obj.number }}-1)*15;
             }
+            init++;
+            td_list[i].innerHTML= `${init}`;
         }
-        numbering(0);
+    }
+    numbering(0);
     
         const canIPost= (is_authenticated)=> {
             if (is_authenticated == 'False') {
