--- a/templates/country/question_list.html
+++ b/templates/country/question_list.html
@@ -43,7 +43,7 @@
                         
                     </span>
                     {% elif page >= page_obj.number|add:-3 and page <= page_obj.number|add:3 %}
-                        ..
+                        <span>..</span>
                     {% endif %}
                 {% endfor %}
                 </div>
