--- a/templates/domestic/question_search.html
+++ b/templates/domestic/question_search.html
@@ -19,12 +19,8 @@
             <button class="btn btn-sm btn-border" onclick="canIPost('{{ is_authenticated }}','{{ is_enrolled }}')"> 글쓰기 </button>
         </div>
         <hr>
-        <form class="d-flex justify-content-center" action="{% url 'domestic:question_search' domestic.pk %}" method="post">
-            {% csrf_token %}
-            <input class="col-9" placeholder="검색" name="q" value="{{q}}">
-            <button class="btn btn-outline-success" type="submit">검색</button>
-        </form>
-
+        <input class="">
+        <button >검색 </button>
         <table>
             <tr align='center'>
                 <th width='50'>번호</th>
@@ -39,7 +35,6 @@
             </tr>
             {% endfor %}
         </table>
-        
         <div style="text-align:center">
             <div class="pagination">
                 <div style="width:35%; margin: 5px;">
